# adc-appkit

./: README.md  pyproject.toml  setup.py
adc_appkit/: __init__.py  app.py  base_app.py  component_manager.py  di_container.py  request_scope.py  service.py
adc_appkit/components/: component.py  dao.py  http.py  pg.py  s3.py
appkit/: app.py  component.py
appkit/components/: __init__.py  dao.py  http.py  pg.py  s3.py
examples/: basic_examples.py
